objects/SMAX_PS_ProductRevision__c.object
<CustomObject>
    <label>Product Revision</label>
    <nameField>
        <displayFormat>PREV-{00000000}</displayFormat>
        <label>Product Revision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Revisions</relationshipLabel>
        <relationshipName>Product_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RevisionDate__c</fullName>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RevisionLevel__c</fullName>
        <label>Revision Level</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>